--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-prettify": "^0.5.0",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.9",
     "gulp-sourcemaps": "^2.6.5",
